force-app/main/default/objects/Medical_Case__c/Medical_Case__c.object-meta.xml
<CustomObject>
    <label>Medical Case</label>
    <nameField>
        <displayFormat>CID-{0000}</displayFormat>
        <label>Medical Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>