force-app/main/default/objects/Medical_Case__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>