force-app/main/default/objects/Medical_Case__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Medical_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>