force-app/main/default/objects/Medical_Case__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Medical Cases</relationshipLabel>
    <relationshipName>Medical_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>