force-app/main/default/objects/Medical_Case__c/fields/Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan__c</fullName>
    <label>Treatment Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>